--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -25,16 +25,16 @@ slorber:
     newsletter: https://thisweekinreact.com
 
 
-Francis:
+francis:
   name: Francis O
-  title: Systems Engineer
+  title: Systems & Software Engineer
   url: https://scafblog.com
-  image_url: https://github.com/scafblog.png
+  image_url: /img/profile.png
   page:
     # customize the url of the author page at /blog/authors/<permalink>
     permalink: '/all-francis-O-articles'
   socials:
     x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+    linkedin: francisoo
+    github: francis-dotcom
+    newsletter: https://cyquadtech.com
