--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@docusaurus/core": "3.8.1",
     "@docusaurus/preset-classic": "3.8.1",
+    "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-share": "^5.2.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
