--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -27,7 +27,7 @@ slorber:
 
 francis:
   name: Francis O
-  title: Systems & Software Engineer
+  title: Applied Systems Engineer | AI + OR Strategist
   url: https://scafblog.com
   image_url: /img/profile.png
   page:
