--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "generate": "node scripts/feed-to-draft.mjs",
+    "generate:auto": "node scripts/feed-to-draft.mjs",
+    "generate:pick": "node scripts/feed-to-draft.mjs --interactive",
+    "preview": "node scripts/feed-to-draft.mjs --preview",
+    "generate:debug": "LOG_LEVEL=DEBUG node scripts/feed-to-draft.js",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -19,10 +24,16 @@
     "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.3",
+    "inquirer": "^9.2.12",
+    "openai": "^6.16.0",
+    "p-limit": "^7.2.0",
     "prism-react-renderer": "^2.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-share": "^5.2.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-share": "^5.2.2",
+    "rss-parser": "^3.13.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
