--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "generate": "node scripts/feed-to-draft.mjs",
     "generate:auto": "node scripts/feed-to-draft.mjs",
     "generate:pick": "node scripts/feed-to-draft.mjs --interactive",
+    "publish:pr": "node scripts/generate-and-pr.mjs",
+    "generate:pr": "npm run generate && npm run publish:pr",
     "preview": "node scripts/feed-to-draft.mjs --preview",
     "generate:debug": "LOG_LEVEL=DEBUG node scripts/feed-to-draft.js",
     "docusaurus": "docusaurus",
