--- a/.github/workflows/generate-post.yml
+++ b/.github/workflows/generate-post.yml
@@ -2,8 +2,8 @@ name: Generate Blog Post
 
 on:
   schedule:
-    # Runs at 6am UTC daily (adjust for your timezone)
-    - cron: '0 6 * * *'
+    # Runs at 6am Eastern Time daily
+    - cron: '0 11 * * *'
   workflow_dispatch: # Allows manual trigger
 
 jobs:
