--- a/.github/workflows/generate-post.yml
+++ b/.github/workflows/generate-post.yml
@@ -2,9 +2,12 @@ name: Generate Blog Post
 
 on:
   schedule:
-    # Runs at 1am Eastern Time daily
     - cron: '0 6 * * *'
-  workflow_dispatch: # Allows manual trigger
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   generate:
