--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "generate": "node scripts/feed-to-draft.mjs",
     "generate:auto": "node scripts/feed-to-draft.mjs",
     "generate:pick": "node scripts/feed-to-draft.mjs --interactive",
+    "now": "DIRECT_PUBLISH=true NODE_ENV=production node scripts/feed-to-draft.mjs",
     "publish:pr": "node scripts/generate-and-pr.mjs",
     "generate:pr": "npm run generate && npm run publish:pr",
     "preview": "node scripts/feed-to-draft.mjs --preview",
